code review, correções